tests/compile-fail/integration__integration__general__jump_missing_label.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: undefined label 'label'
   ┌─ <input>:22:14
   │
22 │         goto label;
   │              ^^^^^ there is no label by this name


